--- a/templates/config.tmpl
+++ b/templates/config.tmpl
@@ -1,3 +1,6 @@
+; -*- mode: clojure; -*-
+; vim: filetype=clojure
+
 (ns core.tslog.config
   "tslog for Redis engine"
   (:require [taoensso.carmine :as car]
